# commoncpp

./: .cproject  .directory  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  README.md  install-dependencies-fedora.sh  install-dependencies-ubuntu.sh  jamfile  jamroot
src/include/: commoncpp.hpp
src/include/hash/: ImagePHash.hpp  SHA.hpp
src/include/util/: Bit.hpp
src/main/hash/: ImagePHash.cpp  SHA.cpp
src/main/util/: Bit.cpp
src/test/: test_main.cpp
src/test/hash/: ImagePHashTest.cpp  SHATest.cpp
src/test/util/: BitTest.cpp
